created button and padding

--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,10 @@ body, html {
 	font-weight: bold;
 }
 
+.move-down {
+	padding-top: 6rem;
+}
+
 /************************************************************************/
 /*Navbar*/
 /************************************************************************/
